<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/femaleChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/female"
            app:chipIcon="@drawable/baseline_female_24"
            app:chipIconTint="?attr/colorOnSurfaceVariant" />

        <com.google.android.material.chip.Chip
            android:id="@+id/maleChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/male"
            app:chipIcon="@drawable/baseline_male_24"
            app:chipIconTint="?attr/colorOnSurfaceVariant" />

        <com.google.android.material.chip.Chip
            android:id="@+id/othersChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/others"
            app:chipIcon="@drawable/baseline_circle_24"
            app:chipIconTint="?attr/colorOnSurfaceVariant" />
    </com.google.android.material.chip.ChipGroup>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" />
</LinearLayout>
